--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-table": "^6.10.3"
+    "react-table": "^6.10.3",
+    "react-tournament": "^0.1.1",
+    "styled-components": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
